--- a/base/lib-css/responsive.less
+++ b/base/lib-css/responsive.less
@@ -1,12 +1,4 @@
-@media (max-width:700px){
-}
-
-@media (max-width:800px){
-    .en-2-columnas {
-        div.item { width: 100%; }
-    }
-}
-
-
+@media (max-width:700px){ }
+@media (max-width:800px){ }
 @media screen and (orientation:portrait){}
 @media screen and (orientation:landscape){}
