Ajustes de interfaz. Ayuda.

--- a/base/lib-css/estilo.less
+++ b/base/lib-css/estilo.less
@@ -36,6 +36,11 @@ body {
             width: 100px;
             border: none;
         }
+        .code-actual {
+            code {
+                border-right: solid 2px #f44;
+            }
+        }
         code {
             color: #8f4;
             background: #222;
