Ajustes de glitcheado. También de comportamiento de utilidades.

--- a/base/lib-css/estilo.less
+++ b/base/lib-css/estilo.less
@@ -10,9 +10,9 @@ html{
 }
 
 body {
+    position: relative;
     min-height: 100vh;
     min-height: 100svh;
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -112,7 +112,7 @@ footer {
 }
 
 #notificacion {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     text-align: right;
