Códigos, timer, bugs, items en listados, ajustes de yml.

--- a/base/plantillas/css/estilo.less
+++ b/base/plantillas/css/estilo.less
@@ -38,7 +38,7 @@ body {
         }
         .code-actual {
             code {
-                border-right: solid 2px #f44;
+                border-color: #f44;
                 &:hover {
                     background: #030303;
                 }
@@ -50,6 +50,7 @@ body {
             border-radius: 8px;
             cursor: pointer;
             transition: all 0.3s;
+            border-right: solid 2px transparent;
 
             &:focus {
                 outline: 1px solid rgba(100, 0, 255, 0.7)!important;
