--- a/docs/lib/css/estilo.css
+++ b/docs/lib/css/estilo.css
@@ -32,7 +32,7 @@ body.bloqueado {
   border: none;
 }
 .lista-bb .codigos .code-actual code {
-  border-right: solid 2px #f44;
+  border-color: #f44;
 }
 .lista-bb .codigos .code-actual code:hover {
   background: #030303;
@@ -43,6 +43,7 @@ body.bloqueado {
   border-radius: 8px;
   cursor: pointer;
   transition: all 0.3s;
+  border-right: solid 2px transparent;
 }
 .lista-bb .codigos code:focus {
   outline: 1px solid rgba(100, 0, 255, 0.7) !important;
