Nuevo código. Links en items.

--- a/base/plantillas/css/estilo.less
+++ b/base/plantillas/css/estilo.less
@@ -29,6 +29,15 @@ body {
     padding-bottom: 100px;
 }
 
+.link {
+    text-decoration: none;
+    color: #999;
+    &:hover {
+        color: #aaa;
+        text-decoration: underline;
+    }
+}
+
 .lista-bb {
     color: #eee;
     .codigos {
