--- a/docs/lib/css/estilo.css
+++ b/docs/lib/css/estilo.css
@@ -24,6 +24,14 @@ body.bloqueado {
 .contenido {
   padding-bottom: 100px;
 }
+.link {
+  text-decoration: none;
+  color: #999;
+}
+.link:hover {
+  color: #aaa;
+  text-decoration: underline;
+}
 .lista-bb {
   color: #eee;
 }
