Ajuste de estilo

--- a/base/plantillas/css/estilo.less
+++ b/base/plantillas/css/estilo.less
@@ -8,7 +8,6 @@ html{
     min-height: 100vh;
     min-height: 100svh;
 }
-
 body {
     position: relative;
     min-height: 100vh;
@@ -29,11 +28,10 @@ body {
     padding-bottom: 100px;
 }
 
-.link {
+a {
     text-decoration: none;
-    color: #999;
+    color: #9d9;
     &:hover {
-        color: #aaa;
         text-decoration: underline;
     }
 }
